...
            android:layout_marginEnd="@dimen/margin_detail_views"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/tv_description"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginLeft="@dimen/margin_detail_views"
            android:layout_marginStart="@dimen/margin_detail_views"
            android:layout_marginRight="@dimen/margin_detail_views"
            android:layout_marginEnd="@dimen/margin_detail_views"
            android:layout_width="match_parent"
...
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            >
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_left"
                android:layout_width="@dimen/fab_size"
                android:layout_height="@dimen/fab_size"
                android:layout_marginLeft="@dimen/margin_detail_views"
                android:layout_marginStart="@dimen/margin_detail_views"
                android:layout_marginBottom="@dimen/margin_padding_32dp"
                android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
...
