<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.baking_app.MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_recipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        >

    </android.support.v7.widget.RecyclerView>

</android.support.constraint.ConstraintLayout>
